# tofu-http-backend

./: .gitignore  Dockerfile  README.md  cli.py  config.toml  errored.tfstate  hello.py  main.tf  pyproject.toml  requirements.txt
example/: main.tf  readme.md
example/basic/: main.tf
example/perf/: main.tf
src/: cmd.py  config.py  errors.py  lock.py  log.py  middlewares.py  storage.py
src/app/state/: __init__.py  api.py  readme.md  service.py  types.py
tests/: readme.md
tests/integration/: test_lock.py  test_storage.py
tests/unit/app/state/: test_types.py
