[project]
name = "tofu-http-backend"
version = "0.1.0"
description = "Implementation of the OpenTofu HTTP backend as part of the Scalr home assignment."
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "fastapi==0.115.*",
    "pydantic==2.10.*",
    "uvicorn==0.34.*",
    "minio==7.2.*",
    "structlog==25.1.*",
    "click==8.1.*",
    "python-dotenv==1.0.*",
    "lazy-object-proxy==1.10.*",
    "pydantic-settings==2.7.*",
]

[dependency-groups]
dev = ["pytest==8.3.*", "mypy==1.15.*", "ruff==0.9.*"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["${MYPY_CONFIG_FILE_DIR}/typings"]

plugins = ["pydantic.v1.mypy"]

# Import discovery
follow_imports_for_stubs = true
follow_imports = "silent"

# Disallow dynamic typing
ignore_missing_imports = true
disallow_any_unimported = false
disallow_any_decorated = false

# None and optional handling
implicit_optional = true
strict_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

# Suppressing errors
ignore_errors = false
disable_error_code = ["annotation-unchecked", "unused-ignore"]

# Miscellaneous strictness flags
allow_redefinition = false
strict_equality = true

# Configuring error messages
show_column_numbers = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "RUF013", # Ruff-specific rules
    "PL",     # pylint
    "I",      # isort
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "F401",   # unused-import
    "PT",     # flake8-pytest-style
    "TID",    # flake8-tidy-imports
    "F823",   # undefined-local
    "ICN001", # unconventional-import-alias
    "S",      # flake8-bandit
]
ignore = ["ANN001", "ANN002", "ANN003"]

fixable = ["I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100
skip-magic-trailing-comma = true
indent-style = "space"

[tool.ruff.isort]
force-single-line = true
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "parents"
